<resources>
    <string name="app_name">ThongBaoGDU</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Đại học Gia Định Lịch</string>
    <string name="nav_header_subtitle">daihocgiadinh@edu.com.vn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_profile">Tài khoản</string>
    <string name="nav_logout">Đăng xuất</string>
    <string name="nav_help">Trợ giúp</string>
    <string name="nav_setting">Cài đặt</string>
    <string name="action_settings">Làm mới</string>
    <string name="title_menu"><font color="#ffffff">Tài khoản</font></string>

    <string name="menu_schedule">Lịch biểu</string>
    <string name="menu_today">Hôm nay</string>
    <string name="menu_threeday">3 ngày</string>
    <string name="menu_week">Tuần</string>
    <string name="menu_month">Tháng</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="txt_more_info">Xem thông tin</string>
    <string name="txt_change_pass">Đổi mật khẩu</string>
    <string name="title_menu_he_thong"><font color="#ffffff">Hệ thống</font></string>
    <string name="txt_comments">Đóng góp ý kiến</string>
    <string name="txt_edit_user">Sửa thông tin</string>


    <string name="txt_full_name">Họ tên</string>
    <string name="txt_address">Địa chỉ</string>
    <string name="txt_phone_number">SĐT</string>
    <string name="txt_email">Emai</string>
    <string name="txt_date_of_birth">Ngày sinh</string>
    <string name="txt_department_name">Phòng ban</string>
    <string name="txt_position">Chức vụ</string>
    <string name="txt_role">Vai trò</string>

    <string name="txt_pass_current">Mật khẩu hiện tại</string>
    <string name="txt_password_change">Mật khẩu mới</string>
    <string name="txt_password_change_again">Nhập lại mật khẩu</string>
    <string name="txt_title_dialog_comments">Góp ý kiến</string>
    <string name="txt_subject_feedback">Tiêu đề</string>
    <string name="txt_content_feedback">Nội dung</string>
    <string name="txt_title_change_password">Đổi mật khẩu</string>
    <string name="txt_title_dialog_show_info">Thông tin tài khoản</string>
    <string name="txt_title_edit_user">Sửa thông tin tài khoản</string>

    <string name="btn_save"><font color="#003262">Lưu</font></string>
    <string name="btn_close"><font color="#003262">Đóng</font></string>
    <string-array name="list_color_events">
        <item>Màu cam</item>
        <item>Màu xanh nước</item>
        <item>Đỏ</item>
        <item>Xanh lá</item>

</string-array>
</resources>
