<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_menu_today"
            android:title="@string/menu_today" />
        <item
            android:id="@+id/nav_threeday"
            android:icon="@drawable/ic_menu_threeday"
            android:title="@string/menu_threeday" />
        <item
            android:id="@+id/nav_week"
            android:icon="@drawable/ic_menu_week"
            android:title="@string/menu_week" />

        <item android:title="@string/title_menu">
            <menu>
                <item
                    android:id="@+id/nav_info"
                    android:icon="@drawable/ic_menu_account"
                    android:title="@string/nav_profile" />
                <item
                    android:id="@+id/nav_Logout"
                    android:icon="@drawable/ic_menu_logout"
                    android:title="@string/nav_logout" />
            </menu>
        </item>
        <item android:title="@string/title_menu_he_thong">
            <menu>
                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/ic_settings_white_24dp"
                    android:title="@string/nav_setting"/>
                <item
                    android:id="@+id/nav_help"
                    android:icon="@drawable/ic_help_white_24dp"
                    android:title="@string/nav_help"/>
            </menu>
        </item>
    </group>

</menu>
