<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorGduBlue"
        android:text="@string/txt_title_change_password"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_pass_current"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextPasswordCurrent"
        app:layout_constraintStart_toStartOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_password_change"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextNewPassword"
        app:layout_constraintStart_toStartOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:text="@string/txt_password_change_again"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextNewPasswordAgain"
        app:layout_constraintEnd_toStartOf="@+id/editTextNewPasswordAgain"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPasswordCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Nhập mật khẩu hiện tại"
        android:inputType="textPassword"
        android:paddingStart="10sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNewPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Nhập mật khẩu mới"
        android:inputType="textPassword"
        android:paddingStart="10sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNewPasswordAgain"
        app:layout_constraintEnd_toEndOf="@+id/editTextPasswordCurrent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordCurrent" />

    <EditText
        android:id="@+id/editTextNewPasswordAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Nhập lại mật khẩu mới"
        android:inputType="textPassword"
        android:paddingStart="10sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="@+id/editTextNewPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewPassword" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="textView9,textView3,textView8"
        tools:layout_editor_absoluteX="411dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
